{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 49,
  "lineage": "c196d544-c992-9d75-365c-c1cafe6b648a",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/c3111a8a-bc4c-4d81-8a35-32a3b81650c5/resourceGroups/mailer-resource-group/providers/Microsoft.Network/loadBalancers/mailer-load-balancer/frontendIPConfigurations/lb_PublicIPAddress",
                "name": "lb_PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/c3111a8a-bc4c-4d81-8a35-32a3b81650c5/resourceGroups/mailer-resource-group/providers/Microsoft.Network/publicIPAddresses/mailer-load-balancer-publicIP"
              }
            ],
            "id": "/subscriptions/c3111a8a-bc4c-4d81-8a35-32a3b81650c5/resourceGroups/mailer-resource-group/providers/Microsoft.Network/loadBalancers/mailer-load-balancer",
            "location": "francecentral",
            "name": "mailer-load-balancer",
            "resource_group_name": "mailer-resource-group",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.lb_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "ni",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c3111a8a-bc4c-4d81-8a35-32a3b81650c5/resourceGroups/mailer-resource-group/providers/Microsoft.Network/networkInterfaces/mailer-network-interface",
            "internal_domain_name_suffix": "v3mmogpiq1ruxees3nif1x5cwf.parx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "mailer-ni-ip-config",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c3111a8a-bc4c-4d81-8a35-32a3b81650c5/resourceGroups/mailer-resource-group/providers/Microsoft.Network/virtualNetworks/mailer-virtual-network/subnets/mailer-subnet1"
              }
            ],
            "location": "francecentral",
            "mac_address": "00-22-48-3A-24-D1",
            "name": "mailer-network-interface",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "mailer-resource-group",
            "tags": {
              "businessUnit": "product-MailServers",
              "department": "techOps",
              "environment": "test",
              "source": "terraform"
            },
            "virtual_machine_id": "/subscriptions/c3111a8a-bc4c-4d81-8a35-32a3b81650c5/resourceGroups/mailer-resource-group/providers/Microsoft.Compute/virtualMachines/mailer-dns-vm-1"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c3111a8a-bc4c-4d81-8a35-32a3b81650c5/resourceGroups/mailer-resource-group/providers/Microsoft.Network/networkSecurityGroups/mailer-network-security-group",
            "location": "francecentral",
            "name": "mailer-network-security-group",
            "resource_group_name": "mailer-resource-group",
            "security_rule": [],
            "tags": {
              "businessUnit": "product-MailServers",
              "department": "techOps",
              "environment": "test",
              "source": "terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsr",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "security rule for the mailer network security group",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/c3111a8a-bc4c-4d81-8a35-32a3b81650c5/resourceGroups/mailer-resource-group/providers/Microsoft.Network/networkSecurityGroups/mailer-network-security-group/securityRules/mailer-NSG-security-rule",
            "name": "mailer-NSG-security-rule",
            "network_security_group_name": "mailer-network-security-group",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "mailer-resource-group",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lb_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/c3111a8a-bc4c-4d81-8a35-32a3b81650c5/resourceGroups/mailer-resource-group/providers/Microsoft.Network/publicIPAddresses/mailer-load-balancer-publicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.216.177.196",
            "ip_version": "IPv4",
            "location": "francecentral",
            "name": "mailer-load-balancer-publicIP",
            "resource_group_name": "mailer-resource-group",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c3111a8a-bc4c-4d81-8a35-32a3b81650c5/resourceGroups/mailer-resource-group/providers/Microsoft.Network/virtualNetworks/mailer-virtual-network/subnets/mailer-subnet1",
            "name": "mailer-subnet1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "mailer-resource-group",
            "virtual_network_name": "mailer-virtual-network"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "19c758af-86e8-4be3-9092-eb505ddfe2b5",
            "id": "/subscriptions/c3111a8a-bc4c-4d81-8a35-32a3b81650c5/resourceGroups/mailer-resource-group/providers/Microsoft.Network/virtualNetworks/mailer-virtual-network",
            "location": "francecentral",
            "name": "mailer-virtual-network",
            "resource_group_name": "mailer-resource-group",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/c3111a8a-bc4c-4d81-8a35-32a3b81650c5/resourceGroups/mailer-resource-group/providers/Microsoft.Network/virtualNetworks/mailer-virtual-network/subnets/mailer-subnet1",
                "name": "mailer-subnet1"
              }
            ],
            "tags": {
              "businessUnit": "product-MailServers",
              "department": "techOps",
              "environment": "test",
              "source": "terraform"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}